# deepagents-orchestrator-exemplar

./: .env.example  AGENTS.md  README.md  agent.py  coverage.json  langgraph.json  orchestrator-config.yaml  pyproject.toml
.claude/task-plans/: TASK-OEX-002-implementation-plan.md  TASK-OEX-005-implementation-plan.md  TASK-OEX-006-implementation-plan.md  TASK-OEX-007-implementation-plan.md
.guardkit/: bootstrap_state.json
.guardkit/features/: FEAT-5009.yaml
agents/: __init__.py  agents.py  builder.py  evaluator.py  implementer.py  orchestrator.py
domains/example-domain/: DOMAIN.md
prompts/: __init__.py  evaluator_prompts.py  orchestrator_prompts.py
skills/example-skill/: SKILL.md
tasks/backlog/: TASK-DEEPAGENTS-ORCH-4CC71DFC.md  TASK-DOMAIN-CONTEXT--7FD6DFC2.md  TASK-LANGCHAIN-TOOL--48D656AD.md  TASK-LANGGRAPH-DEPLO-059BEFE3.md  TASK-OEX-001-scaffold-project.md  TASK-OEX-003-create-prompts.md  TASK-OEX-004-create-config.md  TASK-OEX-005-create-agent-definitions.md  TASK-OEX-006-create-entrypoint.md  TASK-OEX-007-validation.md  TASK-PYTEST-AGENT-TE-24294664.md  TASK-REV-8562-plan-build-deepagents-orchestrator-exemplar.md  TASK-SUBAGENT-COMPOS-2BD893E1.md  TASK-SYSTEM-PROMPT-T-BEF57834.md
tasks/design_approved/: TASK-OEX-002-implement-tools.md  (+3 more)
tests/: test_agent_entrypoint.py  test_agents.py  test_agents_md.py  test_config.py  test_domain_md.py  test_orchestrator_tools.py  test_prompts.py  test_scaffold.py  test_skill_md.py  test_validation_smoke.py
tools/: __init__.py  analyse_context.py  execute_command.py  plan_pipeline.py  verify_output.py
(+62 files in other folders)
