[project]
name = "deepagents-orchestrator-exemplar"
version = "0.1.0"
description = "An orchestrator exemplar built on the DeepAgents SDK using LangGraph"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<4.0"
dependencies = [
    "deepagents>=0.5.0a2",
    "langchain>=1.2.11",
    "langchain-core>=1.2.21",
    "langgraph>=0.2",
    "langsmith>=0.3",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
